# blumeutil

./: Cargo.toml  Containerfile.cuda  LICENSE  README.md  important.txt
blume/: Cargo.toml
blume/src/: config.rs  deuni.rs  init.rs  main.rs
blume/src/stcm2/: mod.rs
research/: formal-exl2.py  translate-exl2.ipynb  translate.ipynb
src/: checkpunct.rs  cleanup.rs  config.rs  deuni.rs  init.rs  main.rs  script.rs
src/iso/: biendian.rs  mod.rs
src/stcm2/: analyze.rs  dict.rs  format.rs  mod.rs  parse.rs  patch.rs
src/translate/: google.rs  googlefree.rs  llm.rs  mod.rs  nllb.rs
src/translate/llm/: characters.rs  similar.py  similar.rs
src/translate/nllb/: nocontext.rs  translate.py  translate.rs
src/uni/: analyze.rs  build.rs  mod.rs
src/web/: err.rs  htmx.rs  mod.rs  model.rs  view.css  view.rs
stcm2/: Cargo.toml
stcm2/src/: main.rs  parse.rs
translate/: Cargo.toml
translate/src/: google.rs  llm.rs  main.rs
translate/src/llm/: similar.rs
unitool/: Cargo.toml
unitool/src/: main.rs
