[package]
name = "blume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["macros"] }
rusqlite = { version = "0.30", features = ["bundled", "blob"] }
clap = { version = "4.4", features = ["derive"] }
axum = "0.7"
tracing-subscriber = "0.3"
tracing = "0.1"
tower-http = { version = "0.5", features = ["trace"] }
html = "0.6"
bytes = "1.5"
once_cell = "1.19"

[dependencies.llama]
package = "llama-cpp-2"
git = "https://github.com/utilityai/llama-cpp-rs.git"
rev = "4d0c363"

[features]
cuda = ["llama/cublas"]

[profile.release]
lto = "fat"
