[package]
name = "blume"
default-run = "blume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
encoding_rs = "0.8"
tokio = { version = "1.35", features = ["macros", "rt"] }
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
bytes = "1.5"
base64 = "0.21"
once_cell = "1.19"
png = "0.17"
rayon = "1.9"

# web only
serde = { version = "1", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", optional = true, features = ["trace"] }
html = { version = "0.6", optional = true }

# translate only
serde_json = { version = "1", optional = true }
reqwest = { version = "0.11", optional = true, features = ["json"] }

[dependencies.llama]
package = "llama-cpp-2"
git = "https://github.com/utilityai/llama-cpp-rs.git"
rev = "4d0c363"
optional = true

[features]
workit = ["web", "translate", "cuda"]
web = ["dep:axum", "dep:tower-http", "dep:html", "dep:tracing-subscriber", "dep:serde"]
translate = ["dep:llama", "dep:reqwest", "dep:serde_json"]
cuda = ["llama/cublas"]

[profile.release]
overflow-checks = true
lto = "fat"
