[package]
name = "blume"
default-run = "blume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
encoding_rs = "0.8"
tokio = { version = "1.39", features = ["macros", "rt"] }
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
bytes = "1.6"
base64 = "0.22"
once_cell = "1.19"
png = "0.17"
rayon = "1.10"

# web only
serde = { version = "1", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", optional = true, features = ["trace"] }
html = { version = "0.6", optional = true }

# translate only
serde_json = { version = "1", optional = true }
reqwest = { version = "0.12", optional = true, features = ["json"] }

[features]
workit = ["web", "translate"]
web = ["dep:axum", "dep:tower-http", "dep:html", "dep:tracing-subscriber", "dep:serde"]
translate = ["dep:reqwest", "dep:serde_json"]

[profile.release]
overflow-checks = true
lto = "fat"
