[package]
name = "translate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
pyo3 = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
